My css project file

--- a/responsive1.css
+++ b/responsive1.css
@@ -12,7 +12,7 @@
 @media all and (max-width:713px){  
     .header_area {
         height: 168px;
-        background: #3B5997;}
+        background: #9fa1a3;}
 
     .login_area {
         width: 100%;
